--- a/app/src/main/res/layout/test_menu_layout.xml
+++ b/app/src/main/res/layout/test_menu_layout.xml
@@ -33,6 +33,15 @@
             android:text="delete"
             />
 
+        <Button
+            android:id="@+id/update_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/delete_button"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="update"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
