--- a/app/src/main/res/layout/test_menu_layout.xml
+++ b/app/src/main/res/layout/test_menu_layout.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="vm"
+            type="arakene.fatwallet.viewModel.PayViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -22,6 +28,7 @@
             app:layout_constraintTop_toBottomOf="@id/logout_button"
             app:layout_constraintStart_toStartOf="parent"
             android:text="add"
+            android:onClick="@{()->vm.saveData()}"
             />
 
         <Button
@@ -31,8 +38,8 @@
             app:layout_constraintTop_toBottomOf="@id/add_button"
             app:layout_constraintStart_toStartOf="parent"
             android:text="delete"
-            />
 
+            />
         <Button
             android:id="@+id/update_button"
             android:layout_width="wrap_content"
@@ -40,6 +47,7 @@
             app:layout_constraintTop_toBottomOf="@id/delete_button"
             app:layout_constraintStart_toStartOf="parent"
             android:text="update"
+
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
