--- a/app/src/main/res/layout/test_menu_layout.xml
+++ b/app/src/main/res/layout/test_menu_layout.xml
@@ -38,7 +38,7 @@
             app:layout_constraintTop_toBottomOf="@id/add_button"
             app:layout_constraintStart_toStartOf="parent"
             android:text="delete"
-
+            android:onClick="@{()->vm.deleteData()}"
             />
         <Button
             android:id="@+id/update_button"
