--- a/app/src/main/res/layout/test_menu_layout.xml
+++ b/app/src/main/res/layout/test_menu_layout.xml
@@ -51,11 +51,12 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:background="@android:color/holo_blue_dark"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:id="@+id/pay_list_recyclerview"
             app:layout_constraintTop_toBottomOf="@id/update_button"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="50dp"
             />
