--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -7,16 +7,17 @@
         android:layout_height="match_parent">
 
 
-        <TextView
-            android:id="@+id/list_TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="List"
-            android:textSize="60sp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:background="@android:color/holo_blue_dark"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/pay_list_recyclerview"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
