--- a/app/src/main/res/layout/pay_add_layout.xml
+++ b/app/src/main/res/layout/pay_add_layout.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="vm"
+            type="arakene.fatwallet.viewModel.PayViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -181,10 +187,10 @@
             android:layout_margin="15dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:text="Cancel"
             android:backgroundTint="@color/fui_transparent"
-            android:textSize="20sp"
+            android:text="Cancel"
             android:textColor="@color/white"
+            android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@id/update_ok"
             app:layout_constraintTop_toBottomOf="@id/update_tags" />
 
@@ -195,8 +201,8 @@
             android:layout_margin="15dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:text="OK"
             android:backgroundTint="@android:color/holo_red_light"
+            android:text="OK"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/update_tags" />
