--- a/app/src/main/res/layout/default_layout.xml
+++ b/app/src/main/res/layout/default_layout.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/test_TextView"
