--- a/app/src/main/res/layout/pay_add_layout.xml
+++ b/app/src/main/res/layout/pay_add_layout.xml
@@ -105,7 +105,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/picked_date" />
 
-        <TextView
+        <EditText
             android:id="@+id/update_purpose"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -126,7 +126,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/update_purpose_text" />
 
-        <TextView
+        <EditText
             android:id="@+id/update_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -147,7 +147,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/update_price_text" />
 
-        <TextView
+        <EditText
             android:id="@+id/update_des"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
