--- a/app/src/main/res/layout/pay_add_layout.xml
+++ b/app/src/main/res/layout/pay_add_layout.xml
@@ -133,6 +133,7 @@
             android:layout_margin="15dp"
             android:background="@drawable/add_textview_style"
             android:textSize="20sp"
+            android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/update_price_text"
             app:layout_constraintTop_toBottomOf="@id/update_purpose" />
@@ -227,6 +228,15 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.93" />
+
+        <ImageButton
+            android:id="@+id/new_reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/ic_reset"
+            app:layout_constraintStart_toStartOf="@id/tag_box_start"
+            app:layout_constraintTop_toBottomOf="@id/update_tags" />
 
         <GridLayout
             android:id="@+id/word_box"
