--- a/app/src/main/res/drawable/input_button_border.xml
+++ b/app/src/main/res/drawable/input_button_border.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:thickness="0dp">
-    <stroke android:width="2dp" android:color="#00a2ee"/>
+    <stroke android:width="2dp" android:color="@color/input_color"/>
     <solid android:color="@color/fui_transparent"/>
 </shape>
