--- a/app/src/main/res/layout/pay_add_layout.xml
+++ b/app/src/main/res/layout/pay_add_layout.xml
@@ -32,10 +32,10 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/input_button_border"
-                android:buttonTint="#00a2ee"
+                android:buttonTint="@color/input_color"
                 android:gravity="center"
                 android:text="Input"
-                android:textColor="#00a2ee"
+                android:textColor="@color/input_color"
                 android:textSize="25sp" />
 
             <RadioButton
@@ -47,10 +47,10 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/output_button_border"
-                android:buttonTint="#ff7f00"
+                android:buttonTint="@color/output_color"
                 android:gravity="center"
                 android:text="Output"
-                android:textColor="#ff7f00"
+                android:textColor="@color/output_color"
                 android:textSize="25sp" />
 
         </RadioGroup>
