--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -6,16 +6,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <GridLayout
-            android:id="@+id/tag_box"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:visibility="invisible"
-            />
-
         <Button
             android:id="@+id/list_reset"
             android:layout_width="wrap_content"
@@ -32,12 +22,13 @@
             app:layout_constraintStart_toEndOf="@id/list_reset"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <Spinner
             android:id="@+id/list_tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="tag"
             app:layout_constraintStart_toEndOf="@id/list_date"
+            android:background="@drawable/output_button_border"
+            android:layout_marginStart="10dp"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
