--- a/app/src/main/res/layout/default_layout.xml
+++ b/app/src/main/res/layout/default_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="payListViewModel"
             type="arakene.fatwallet.viewModel.PayListViewModel" />
@@ -26,6 +27,13 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.05" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/view_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.95" />
+
         <TextView
             android:id="@+id/total_input_label"
             android:layout_width="wrap_content"
@@ -39,8 +47,8 @@
             android:id="@+id/total_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
             android:text='@{payListViewModel.input}'
+            android:textSize="25sp"
             app:layout_constraintStart_toEndOf="@id/total_input_label"
             app:layout_constraintTop_toTopOf="@id/input_top" />
 
@@ -64,8 +72,8 @@
             android:id="@+id/total_output"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
             android:text='@{payListViewModel.output}'
+            android:textSize="25sp"
             app:layout_constraintStart_toEndOf="@id/total_output_label"
             app:layout_constraintTop_toBottomOf="@id/output_top" />
 
@@ -84,6 +92,23 @@
             android:textSize="25sp"
             app:layout_constraintStart_toStartOf="@id/input_start"
             app:layout_constraintTop_toBottomOf="@id/monthly_top" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/monthly_out_recyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintBottom_toBottomOf="@id/view_bottom"
+            app:layout_constraintEnd_toEndOf="@id/view_end"
+            app:layout_constraintStart_toStartOf="@id/input_start"
+            app:layout_constraintTop_toBottomOf="@id/monthly_output" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/view_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.95" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
