--- a/app/src/main/res/layout/default_layout.xml
+++ b/app/src/main/res/layout/default_layout.xml
@@ -5,8 +5,8 @@
     <data>
 
         <variable
-            name="payListViewModel"
-            type="arakene.fatwallet.viewModel.PayListViewModel" />
+            name="vm"
+            type="arakene.fatwallet.viewModel.PayViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -47,7 +47,7 @@
             android:id="@+id/total_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text='@{payListViewModel.input}'
+            android:text='@{vm.input}'
             android:textSize="25sp"
             app:layout_constraintStart_toEndOf="@id/total_input_label"
             app:layout_constraintTop_toTopOf="@id/input_top" />
@@ -72,7 +72,7 @@
             android:id="@+id/total_output"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text='@{payListViewModel.output}'
+            android:text='@{vm.output}'
             android:textSize="25sp"
             app:layout_constraintStart_toEndOf="@id/total_output_label"
             app:layout_constraintTop_toBottomOf="@id/output_top" />
